--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,41 @@ body{
 #esquerda{
     float: left;
     width: 45%;
-    height:  600px;
+    height:  200px;
     margin-left: 4%;
+    margin-top: 4%;
+    border-radius: 10px;
+    background-color: darkgray;
+    border: 1px solid red;
+}
+
+#Moneys{
+    float: left;
+    margin-left: 1%;
+    margin-top: 1%;
+    width: 98%;
+    height: 17%;
+    border-radius: 5px;
+
+    text-align: center;
+    font-size: 130%;
+}
+
+#BTN_enviar{
+    float: left;
+    margin-left: 35%;
+    margin-top: 5%;
+    width: 30%;
+    height: 20%;
+    text-align: center;
+    font-size: 130%;
+}
+
+#direita{
+    float: left;
+    width: 45%;
+    height: 200px;
+    margin-left: 2%;
+    margin-top: 4%;
     border: 1px solid red;
 }
