terminando de configurar a primeira rota
Encontrei um erro ao executar o botão pesquisar

--- a/views/introducao.handlebars
+++ b/views/introducao.handlebars
@@ -112,7 +112,7 @@
         <option value=""><strong></strong></option>
     </select>
 
-    <button type="submit" id="BTN_enviar" onclick="PesquisarMoeda()"><strong>Pesquisar</strong></button>
+    <button type="button" id="BTN_enviar" onclick="PesquisarMoeda()"><strong>Pesquisar</strong></button>
 </div>
 <div id="direita">
     
