--- a/views/introducao.handlebars
+++ b/views/introducao.handlebars
@@ -115,5 +115,11 @@
     <button type="button" id="BTN_enviar" onclick="PesquisarMoeda()"><strong>Pesquisar</strong></button>
 </div>
 <div id="direita">
-    
+    <div id="direita01">5.55</div>
+    <div id="direita02">USD $</div>
+    <div id="direita03">Dólar</div>
+</div>
+
+<div id="Baixo">
+    <button type="button" id="BD_SalvarBD" onclick="BTN_salvar()">Salvar Banco de Dados</button>
 </div>
