Corrigindo bot para pegar valores

--- a/views/introducao.handlebars
+++ b/views/introducao.handlebars
@@ -1,111 +1,6 @@
 <div id="esquerda">
     <select name="Moneys" id="Moneys">
-        <option value="Apsar abecasio"><strong>Apsar abecásio</strong></option>
-        <option value="Rublo russo"><strong>Rublo russo</strong></option>
-        <option value="Euro"><strong>Euro</strong></option>
-        <option value="Afegane afegão"><strong>	Afegane afegão</strong></option>
-        <option value="Rand sul-africano"><strong>Rand sul-africano</strong></option>
-        <option value="Lek albanês"><strong>Lek albanês</strong></option>
-        <option value="Libra de Alderney"><strong>Libra de Alderney</strong></option>
-        <option value="Libra esterlina"><strong>Libra esterlina</strong></option>
-        <option value="Libra de Guernesei"><strong>Libra de Guernesei</strong></option>
-        <option value="Dram arménio"><strong>Dram arménio</strong></option>
-        <option value="Dram de Artsaque"><strong>Dram de Artsaque</strong></option>
-        <option value="Kwanza angolano"><strong>Kwanza angolano</strong></option>
-        <option value="Dólar das Caraíbas Orientais"><strong>Dólar das Caraíbas Orientais</strong></option>
-        <option value="Rial saudita"><strong>Rial saudita</strong></option>
-        <option value="Dinar argelino"><strong>Dinar argelino</strong></option>
-        <option value="Peso argentino"><strong>Peso argentino</strong></option>
-        <option value="Dram arménio"><strong>Dram arménio</strong></option>
-        <option value="Florim arubano"><strong>Florim arubano</strong></option>
-        <option value="Libra de Ascensão"><strong>Libra de Ascensão</strong></option>
-        <option value="Libra de Santa Helena"><strong>Libra de Santa Helena</strong></option>
-        <option value="Dólar australiano"><strong>Dólar australiano</strong></option>
-        <option value="Manat azerbaijano"><strong>Manat azerbaijano</strong></option>
-        <option value="Dólar baamense"><strong>Dólar baamense</strong></option>
-        <option value="Taka bangladexense"><strong>Taka bangladexense</strong></option>
-        <option value="Dólar dos Barbados"><strong>Dólar dos Barbados</strong></option>
-        <option value="Dinar barenita"><strong>Dinar barenita</strong></option>
-        <option value="Dólar do Belize"><strong>Dólar do Belize</strong></option>
-        <option value="Dólar bermudense"><strong>Dólar bermudense</strong></option>
-        <option value="Rublo bielorrusso"><strong>Rublo bielorrusso</strong></option>
-        <option value="Boliviano"><strong>Boliviano</strong></option>
-        <option value="Dólar dos Estados Unidos"><strong>Dólar dos Estados Unidos</strong></option>
-        <option value="Marco convertível da Bósnia e Herzegovina"><strong>Marco convertível da Bósnia e Herzegovina</strong></option>
-        <option value="Pula do Botsuana"><strong>Pula do Botsuana</strong></option>
-        <option value="Real"><strong>Real</strong></option>
-        <option value="Dólar do Brunei"><strong>Dólar do Brunei</strong></option>
-        <option value="Dólar de Singapura"><strong>Dólar de Singapura</strong></option>
-        <option value="Lev búlgaro"><strong>Lev búlgaro</strong></option>
-        <option value="Franco CFA BCEAO"><strong>Franco CFA BCEAO</strong></option>
-        <option value="Franco burundiano"><strong>Franco burundiano</strong></option>
-        <option value="Ngultrum butanês"><strong>Ngultrum butanês</strong></option>
-        <option value="Rupia indiana"><strong>Rupia indiana</strong></option>
-        <option value="Escudo cabo-verdiano"><strong>Escudo cabo-verdiano</strong></option>
-        <option value="Dólar das Ilhas Caimão"><strong>Dólar das Ilhas Caimão</strong></option>
-        <option value="Gurde haitiano"><strong>Gurde haitiano</strong></option>
-        <option value="Riel cambojano"><strong>Riel cambojano</strong></option>
-        <option value="Dólar dos Estados Unidos"><strong>Dólar dos Estados Unidos</strong></option>
-        <option value="Dólar canadiano"><strong>Dólar canadiano</strong></option>
-        <option value="Rial catarense"><strong>Rial catarense</strong></option>
-        <option value="Tengue cazaque"><strong>Tengue cazaque</strong></option>
-        <option value="Franco CFA BEAC"><strong>Franco CFA BEAC</strong></option>
-        <option value="Coroa checa"><strong>Coroa checa</strong></option>
-        <option value="Peso chileno"><strong>Peso chileno</strong></option>
-        <option value="Iuane chinês"><strong>Iuane chinês</strong></option>
-        <option value="Lira turca"><strong>Lira turca</strong></option>
-        <option value="Dólar australiano"><strong>Dólar australiano</strong></option>
-        <option value="Peso colombiano"><strong>Peso colombiano</strong></option>
-        <option value="Franco comorense"><strong>Franco comorense</strong></option>
-        <option value="Franco congolês"><strong>Franco congolês</strong></option>
-        <option value="Dólar da Nova Zelândia"><strong>Dólar da Nova Zelândia</strong></option>
-        <option value="Dólar das Ilhas Cook"><strong>Dólar das Ilhas Cook</strong></option>
-        <option value="Won norte-coreano"><strong>Won norte-coreano</strong></option>
-        <option value="Won sul-coreano"><strong>Won sul-coreano</strong></option>
-        <option value="Colón costarriquenho"><strong>Colón costarriquenho</strong></option>
-        <option value="Kuna croata"><strong>Kuna croata</strong></option>
-        <option value="Dinar cuaitiano"><strong>Dinar cuaitiano</strong></option>
-        <option value="Peso cubano convertível"><strong>Peso cubano convertível</strong></option>
-        <option value="Peso cubano"><strong>Peso cubano</strong></option>
-        <option value="Florim antilhano"><strong>Florim antilhano</strong></option>
-        <option value="Coroa dinamarquesa"><strong>Coroa dinamarquesa</strong></option>
-        <option value="Dólar das Caraíbas Orientais"><strong>Dólar das Caraíbas Orientais</strong></option>
-        <option value="Peso dominicano"><strong>Peso dominicano</strong></option>
-        <option value="	Libra egípcia"><strong>	Libra egípcia</strong></option>
-        <option value="Dirame dos Emirados Árabes Unidos"><strong>Dirame dos Emirados Árabes Unidos</strong></option>
-        <option value="Nakfa eritreia"><strong>Nakfa eritreia</strong></option>
-        <option value="Birr etíope"><strong>Birr etíope</strong></option>
-        <option value="Coroa dinamarquesa"><strong>Coroa dinamarquesa</strong></option>
-        <option value="Coroa feroesa"><strong>Coroa feroesa</strong></option>
-        <option value="Dólar fijiano"><strong>Dólar fijiano</strong></option>
-        <option value="Peso filipino"><strong>Peso filipino</strong></option>
-        <option value="Dalasi gambiano"><strong>Dalasi gambiano</strong></option>
-        <option value="Cedi do Gana"><strong>Cedi do Gana</strong></option>
-        <option value="Lari georgiano"><strong>Lari georgiano</strong></option>
-        <option value="Libra de Gibraltar"><strong>Libra de Gibraltar</strong></option>
-        <option value="Dólar das Caraíbas Orientais"><strong>Dólar das Caraíbas Orientais</strong></option>
-        <option value="Quetzal guatemalteco"><strong>Quetzal guatemalteco</strong></option>
-        <option value="Dólar guianense"><strong>Dólar guianense</strong></option>
-        <option value="Franco guineense"><strong>Franco guineense</strong></option>
-        <option value="Lempira hondurenha"><strong>Lempira hondurenha</strong></option>
-        <option value="Dólar de Honguecongue"><strong>Dólar de Honguecongue</strong></option>
-        <option value="Florim húngaro"><strong>Florim húngaro</strong></option>
-        <option value="Rial iemenita"><strong>Rial iemenita</strong></option>
-        <option value="Rupia indonésia"><strong>Rupia indonésia</strong></option>
-        <option value="Rial iraniano"><strong>Rial iraniano</strong></option>
-        <option value="Dinar iraquiano"><strong>Dinar iraquiano</strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
-        <option value=""><strong></strong></option>
+        <option value="Dólar"><strong>Dólar</strong></option>
         <option value=""><strong></strong></option>
         <option value=""><strong></strong></option>
         <option value=""><strong></strong></option>
