Fazendo alteração do site de obtenção de valor

--- a/views/introducao.handlebars
+++ b/views/introducao.handlebars
@@ -1,6 +1,6 @@
 <div id="esquerda">
     <select name="Moneys" id="Moneys">
-        <option value="Afegane"><strong>Afegane Afegão</strong></option>
+        <option value="DÓLAR COMERCIAL"><strong>DÓLAR COMERCIAL</strong></option>
         <option value="Ariary de Madagascar"><strong>Ariary de Madagascar</strong></option>
         <option value="Baht Tailandês"><strong>Baht Tailandês</strong></option>
         <option value="Balboa Panamenho"><strong>Balboa Panamenho</strong></option>
