Fazendo alguns ajustes

--- a/views/introducao.handlebars
+++ b/views/introducao.handlebars
@@ -1,45 +1,9 @@
 <div id="esquerda">
     <select name="Moneys" id="Moneys">
-        <option value="DÓLAR COMERCIAL"><strong>DÓLAR COMERCIAL</strong></option>
-        <option value="Ariary de Madagascar"><strong>Ariary de Madagascar</strong></option>
-        <option value="Baht Tailandês"><strong>Baht Tailandês</strong></option>
-        <option value="Balboa Panamenho"><strong>Balboa Panamenho</strong></option>
-        <option value="Birr Etíope"><strong>Birr Etíope</strong></option>
-        <option value="Bitcoin "><strong>Bitcoin</strong></option>
-        <option value="Boliviano da Bolívia"><strong>Boliviano da Bolívia</strong></option>
-        <option value="Cedi de Gana"><strong>Cedi de Gana</strong></option>
-        <option value="Colón Costa-Riquenho"><strong>Colón Costa-Riquenho</strong></option>
-        <option value="Córdoba Nicaraguense"><strong>Córdoba Nicaraguense</strong></option>
-        <option value="Coroa Dinamarquesa"><strong>Coroa Dinamarquesa</strong></option>
-        <option value="Coroa Islandesa"><strong>Coroa Islandesa</strong></option>
-        <option value="Coroa Norueguesa"><strong>Coroa Norueguesa</strong></option>
-        <option value="Coroa Sueca"><strong>Coroa Sueca</strong></option>
-        <option value="Coroa Tcheca"><strong>Coroa Tcheca</strong></option>
-        <option value="Cuacha Malauiana"><strong>Cuacha Malauiana</strong></option>
-        <option value="Cuacha Zambiana"><strong>Cuacha Zambiana</strong></option>
-        <option value="Dinar Argelino"><strong></strong></option>
-        <option value="Dinar Bareinita"><strong>Dinar Bareinita</strong></option>
-        <option value="Dinar Iraquiano"><strong>Dinar Iraquiano</strong></option>
-        <option value="Dinar Jordaniano"><strong>Dinar Jordaniano</strong></option>
-        <option value="Dinar Kuwaitiano"><strong>Dinar Kuwaitiano</strong></option>
-        <option value="Dinar Líbio"><strong>Dinar Líbio</strong></option>
-        <option value="Dinar Macedônio"><strong></strong></option>
-        <option value="Dinar Tunisiano"><strong>Dinar Tunisiano</strong></option>
-        <option value="Dirham dos Emirados Árabes Unidos"><strong>Dirham dos Emirados Árabes Unidos</strong></option>
-        <option value="Dirham Marroquino"><strong>Dirham Marroquino</strong></option>
-        <option value="Dólar"><strong>Dólar</strong></option>
-        <option value="Dólar de Cingapura"><strong>Dólar de Cingapura</strong></option>
+        <option value="DÓLAR"><strong>DÓLAR COMERCIAL</strong></option>
+        <option value=" Libra_Esterlina"><strong> Libra</strong></option>
+        <option value="peso_chileno"><strong>Peso Chileno</strong></option>
         <option value="Euro"><strong>Euro</strong></option>
-        <option value="Libra"><strong>Libra</strong></option>
-        <option value="Peso Chileno"><strong>Peso Chileno</strong></option>
-        <option value="Peso Argentino"><strong>Peso Argentino</strong></option>
-        <option value="Peso cubano"><strong>Peso Cubano</strong></option>
-        <option value="Peso Mexicano"><strong>Peso Mexicano</strong></option>
-        <option value="Peso Uruguaio"><strong>Peso Uruguaio</strong></option>
-        <option value="Peso Dominicano"><strong>Peso Dominicano</strong></option>
-        <option value="Real brasileiro"><strong></strong></option>
-        <option value=" Gourde Haitiano"><strong> Gourde Haitiano</strong></option>
-
     </select>
 
     <button type="button" id="BTN_enviar" onclick="PesquisarMoeda()"><strong>Pesquisar</strong></button>
